[Enhancement] support collection array column ndv (#60623)
Signed-off-by: stephen <stephen5217@163.com>